1143: Ensure the hover colour of the CTA link in a notification remains visible, rather than becoming blue on blue

--- a/src/css/molecules/notification-bar.scss
+++ b/src/css/molecules/notification-bar.scss
@@ -1,6 +1,9 @@
 .mzp-c-notification-bar {
   .mzp-c-notification-bar-cta {
     text-decoration: underline;
+    &:hover {
+      color: $color-gray-40;
+    }
   }
 
   .mzp-c-notification-bar-button {
